# appcenter

./: .gitattributes  .gitignore  .gitmodules  .mailmap  .travis.yml  AUTHORS.md  CMakeLists.txt  README.md  appcenter.qbs  papyros-appstore.desktop  papyros-software.desktop
.reuse/: dep5
.travis/: build.sh
.tx/: config  sources.json
app/: CMakeLists.txt  app.qbs  appcenter.qrc  main.cpp
app/qml/: AllAppsPage.qml  AllTab.qml  ApplicationPage.qml  IconItem.qml  InstalledAppsPage.qml  InstalledTab.qml  SettingsPage.qml  SourcesTab.qml  main.qml
cmake/: FindFlatpak.cmake  FindGIO.cmake  FindGObject.cmake  FindXdgApp.cmake
daemon/: CMakeLists.txt  main.cpp  updatenotifier.h
data/: CMakeLists.txt  io.liri.AppCenter.appdata.xml  io.liri.AppCenter.desktop  io.liri.AppCenter.notifyrc  (+2 more)
declarative/: CMakeLists.txt  declarative.qbs  plugin.cpp  plugin.h  qmldir
framework/: CMakeLists.txt  SoftwareConfig.cmake.in  application.cpp  application.h  appstreamcomponent.cpp  appstreamcomponent.h  appstreamscreenshot.cpp  appstreamscreenshot.h  appstreamstore.cpp  appstreamstore.h  appstreamurl.cpp  appstreamurl.h  autocast_p.h  backend.h  framework.qbs  lirisoftwareglobal.h  logging.cpp  logging.h  screenshot.cpp  screenshot.h  softwaremanager.cpp  softwaremanager.h  source.h  utils.cpp  utils.h
framework/appstream/: component.cpp  component.h  screenshot.cpp  screenshot.h  store.cpp  store.h  url.cpp
framework/flatpak/: base.h  flatpak-application.cpp  flatpak-application.h  flatpak-backend.cpp  flatpak-backend.h  flatpak-remote.h
framework/xdg-app/: xdg-application.cpp  xdg-backend.cpp  xdg-backend.h  xdg-remote.h
modules/Papyros/Software/: CMakeLists.txt  application.cpp  application.h  autocast.h  backend.h  base.h  plugin.cpp  qmldir  remote.h  software.cpp  software.h  source.h  utils.cpp  utils.h  xdg-app-plugin.cpp  xdg-app-plugin.h  xdg-app.cpp  xdg-app.h
modules/Papyros/Software/appstream/: component.cpp  component.h  screenshot.cpp  screenshot.h  store.cpp  store.h  url.cpp  url.h  utils.cpp  utils.h
modules/Papyros/Software/xdg-app/: base.h  xdg-application.cpp  xdg-application.h  xdg-backend.cpp  xdg-backend.h  xdg-remote.h
notifier/: CMakeLists.txt  main.cpp  notifier.qbs  updatenotifier.cpp  updatenotifier.h
src/: ApplicationPage.qml  CMakeLists.txt  main.cpp  main.qml  papyros-appcenter.qrc  programs.qbs
src/app/: CMakeLists.txt  app.qbs  appcenter.qrc  io.liri.AppCenter.appdata.xml  io.liri.AppCenter.appdata.xml.in  io.liri.AppCenter.desktop  io.liri.AppCenter.desktop.in  main.cpp
src/app/qml/: AddSourceDialog.qml  AllAppsTab.qml  AppPage.qml  InstalledAppsTab.qml  Rating.qml  RatingStar.qml  SourcesTab.qml  StarRatings.qml  Transaction.qml  UpdatesTab.qml  main.qml
src/app/qml/app/: Buttons.qml  Details.qml  Header.qml  HeaderRatings.qml  Icon.qml  Info.qml  RatingsReviews.qml  Review.qml  Screenshots.qml  Transaction.qml
src/app/qml/pages/: AddReviewPage.qml  ReviewsPage.qml
src/app/qml/ratings/: RatingNumber.qml  RatingStar.qml  StarIcon.qml  StarRatings.qml
src/app/translations/: appcenter_ar.ts  appcenter_da.ts  appcenter_es.ts  appcenter_fr.ts  appcenter_ja.ts  appcenter_lt.ts  appcenter_pl.ts  appcenter_zh_TW.ts  io.liri.AppCenter_da.desktop  io.liri.AppCenter_fr.desktop  io.liri.AppCenter_id.desktop  io.liri.AppCenter_ja.desktop  io.liri.AppCenter_lt.desktop  io.liri.AppCenter_nl.desktop  io.liri.AppCenter_pl.desktop  io.liri.AppCenter_pt_BR.desktop  io.liri.AppCenter_ru.desktop  io.liri.AppCenter_zh_CN.desktop  io.liri.AppCenter_zh_TW.desktop
src/appstream/: CMakeLists.txt  bundle.cpp  bundle.h  category.cpp  category.h  component.cpp  component.h  contentrating.cpp  contentrating.h  create  icon.cpp  icon.h  image.cpp  image.h  launchable.cpp  launchable.h  metadata.cpp  metadata.h  pool.cpp  pool.h  provided.cpp  provided.h  qcompressor.cpp  qcompressor.h  release.cpp  release.h  screenshot.cpp  screenshot.h  suggested.cpp  suggested.h  translation.cpp  translation.h  video.cpp  video.h
src/framework/: CMakeLists.txt  backend.cpp  backend.h  backendplugin.cpp  backendplugin.h  cachednetworkaccessmanager.cpp  cachednetworkaccessmanager_p.h  framework.qbs  image.cpp  image.h  image_p.h  liriappcenterglobal.h  rating.cpp  rating.h  rating_p.h  resourceproxy.cpp  resourceproxy.h  resourceproxy_p.h  resourcesmodel.cpp  resourcesmodel.h  resourcesmodel_p.h  review.cpp  review.h  review_p.h  reviewsbackend.cpp  reviewsbackend.h  reviewsbackendplugin.cpp  reviewsbackendplugin.h  reviewsmodel.cpp  reviewsmodel.h  reviewsmodel_p.h  screenshotsmodel.cpp  screenshotsmodel.h  screenshotsmodel_p.h  softwaremanager.cpp  softwaremanager.h  softwaremanager_p.h  softwareresource.cpp  softwareresource.h  softwareresource_p.h  (+12 more)
src/imports/: imports.qbs
src/imports/appcenter/: CMakeLists.txt  appcenter.qbs  filteredresourcesmodel.cpp  filteredresourcesmodel.h  filteredreviewsmodel.cpp  filteredreviewsmodel.h  filteredsourcesmodel.cpp  filteredsourcesmodel.h  logging.cpp  logging.h  paginatemodel.cpp  paginatemodel.h  plugin.cpp  plugins.qmltypes  qmldir
src/notifier/: CMakeLists.txt  io.liri.AppCenter.Notifier.desktop  io.liri.AppCenter.Notifier.desktop.in  main.cpp  updatenotifier.cpp  updatenotifier.h
src/notifier/translations/: notifier_fr.ts  notifier_id.ts  notifier_pt_BR.ts  notifier_zh_TW.ts
src/plugins/: plugins.qbs
src/plugins/flatpak/: CMakeLists.txt  flatpak.qbs  flatpakappstreamjob.cpp  flatpakappstreamjob.h  flatpakbackend.cpp  flatpakbackend.h  flatpakplugin.cpp  flatpakplugin.h  flatpakpluginbase.h  flatpakresource.cpp  flatpakresource.h  flatpaksource.cpp  flatpaksource.h  flatpaktransaction.cpp  flatpaktransaction.h  flatpaktransactionjob.cpp  flatpaktransactionjob.h  flatpakutils.cpp  flatpakutils.h  internetcheck.cpp  internetcheck.h  io.liri.AppCenter.Flatpak.desktop
src/plugins/odrs/: CMakeLists.txt  odrs.json  odrs.json.license  odrsbackend.cpp  odrsbackend.h  odrsplugin.cpp  odrsplugin.h  odrsutils.cpp  odrsutils.h
src/qml/: ApplicationPage.qml  main.qml
src/xdg-app-lib/: xal.cpp  xal.h
(+79 files in other folders)
