find_package(AppStreamQt REQUIRED)

liri_add_module(AppCenter
    DESCRIPTION
        "AppCenter library"
    SOURCES
        backend.cpp
        backend.h
        backendplugin.cpp
        backendplugin.h
        image.cpp
        image.h
        resourcesmodel.cpp
        resourcesmodel.h
        screenshotsmodel.cpp
        screenshotsmodel.h
        softwaremanager.cpp
        softwaremanager.h
        softwareresource.cpp
        softwareresource.h
        softwaresource.cpp
        softwaresource.h
        sourcesmodel.cpp
        sourcesmodel.h
        transaction.cpp
        transaction.h
        transactionsmanager.cpp
        transactionsmanager.h
    FORWARDING_HEADERS
        Backend
        BackendPlugin
        Image
        ResourcesModel
        ScreenshotsModel
        SoftwareManager
        SoftwareResource
        SoftwareSource
        SourcesModel
        Transaction
        TransactionsManager
    PRIVATE_HEADERS
        image_p.h
        resourcesmodel_p.h
        screenshotsmodel_p.h
        softwaremanager_p.h
        softwareresource_p.h
        softwaresource_p.h
        sourcesmodel_p.h
        transaction_p.h
        transactionsmanager_p.h
    DEFINES
        QT_NO_CAST_FROM_ASCII
        QT_NO_FOREACH
    PUBLIC_LIBRARIES
        Qt5::Core
        AppStreamQt
    NO_PKGCONFIG
)
