# SPDX-FileCopyrightText: 2020 Pier Luigi Fiorini <pierluigi.fiorini@gmail.com>
#
# SPDX-License-Identifier: MIT

find_package(AppStreamQt REQUIRED)

liri_add_module(AppCenter
    DESCRIPTION
        "AppCenter library"
    SOURCES
        backend.cpp
        backend.h
        backendplugin.cpp
        backendplugin.h
        cachednetworkaccessmanager.cpp
        cachednetworkaccessmanager_p.h
        image.cpp
        image.h
        rating.cpp
        rating.h
        rating_p.h
        resourcesmodel.cpp
        resourcesmodel.h
        resourcesmodel_p.h
        review.cpp
        review.h
        review_p.h
        reviewsbackend.cpp
        reviewsbackend.h
        reviewsbackendplugin.cpp
        reviewsbackendplugin.h
        reviewsmodel.cpp
        reviewsmodel.h
        reviewsmodel_p.h
        screenshotsmodel.cpp
        screenshotsmodel.h
        softwaremanager.cpp
        softwaremanager.h
        softwareresource.cpp
        softwareresource.h
        softwaresource.cpp
        softwaresource.h
        sourcesmodel.cpp
        sourcesmodel.h
        transaction.cpp
        transaction.h
        transactionsmanager.cpp
        transactionsmanager.h
    FORWARDING_HEADERS
        Backend
        BackendPlugin
        Image
        Rating
        ResourcesModel
        Review
        ReviewsBackend
        ReviewsBackendPlugin
        ReviewsModel
        ScreenshotsModel
        SoftwareManager
        SoftwareResource
        SoftwareSource
        SourcesModel
        Transaction
        TransactionsManager
    PRIVATE_HEADERS
        cachednetworkaccessmanager_p.h
        image_p.h
        rating_p.h
        resourcesmodel_p.h
        review_p.h
        reviewsmodel_p.h
        screenshotsmodel_p.h
        softwaremanager_p.h
        softwareresource_p.h
        softwaresource_p.h
        sourcesmodel_p.h
        transaction_p.h
        transactionsmanager_p.h
    DEFINES
        QT_NO_CAST_FROM_ASCII
        QT_NO_FOREACH
    PUBLIC_LIBRARIES
        Qt5::Core
        Qt5::Network
        AppStreamQt
    NO_PKGCONFIG
)
